fix: bug 1574: prevent status text overlap
Wrapped status panel in new css class'd fixed height flexbox

--- a/src/components/modals/TeachSessionAdmin.css
+++ b/src/components/modals/TeachSessionAdmin.css
@@ -14,9 +14,3 @@
 .cl-training-status-inline__button:hover {
     text-decoration: underline;
 }
-.cl-dialog-admin .cl-ux-flex {
-    margin-bottom:-25px;
-}
-.cl-wc-message--train {
-    margin-top:18px;
-}
